# mizu

./: README.md  build_all.bat  build_and_run.bat  build_editor.bat  build_engine.bat  build_testbed.bat  copy_dll.bat  desktop.ini  fragment_shader.fs.glsl  run.bat  run_editor.bat  vertex_shader.vs.glsl
editor/: CMakeLists.txt
editor/src/: editor.c  editor.h  main.c
engine/: CMakeLists.txt
engine/src/: defines.h
engine/src/core/: application.c  application.h  layer.h  logger.c  logger.h  optional.h
engine/src/math/: mat4.c  mat4.h  math.h  transform.h  vector.c  vector.h
engine/src/memory/: mmemory.c  mmemory.h
engine/src/mesh/: mesh.c  mesh.h
engine/src/performance/: performance.c  performance.h
engine/src/platform/: platform.c  platform.h  platform_backend.c  platform_backend.h
engine/src/renderer/: renderer.c  renderer.h
engine/src/renderer/context/: context.c  context.h
engine/src/renderer/context/api/: opengl_context.c  opengl_context.h
engine/src/renderer/mesh/: mesh.c  mesh.h
engine/src/renderer/object/: index_buffer.c  index_buffer.h  shader.c  shader.h  texture.c  texture.h  uniform_buffer.c  uniform_buffer.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h
engine/src/renderer/object/opengl/: ogl_index_buffer.c  ogl_index_buffer.h  ogl_shader.c  ogl_shader.h  ogl_texture.c  ogl_texture.h  ogl_uniform_buffer.c  ogl_uniform_buffer.h  ogl_vertex_array.c  ogl_vertex_array.h  ogl_vertex_buffer.c  ogl_vertex_buffer.h
engine/src/scene/: scene.c  scene.h  scene_manager.c  scene_manager.h
engine/src/scripting/: script.c  script.h
engine/src/threading/: mizu_thread.h
engine/src/utils/: array.c  array.h
orangutan/: uploads_files_2142893_orangutan.mtl
testbed/: CMakeLists.txt
testbed/src/: main.c
